header style/image added

--- a/app/index.html
+++ b/app/index.html
@@ -21,8 +21,8 @@
 
 <body>
 
-    <header>
-        <div class="intro">
+    <header class="site-header">
+        <div class="site-header--intro">
             <h1>Ara Kim</h1>
             <h2>Web developer</h2>
         </div>
@@ -43,11 +43,11 @@
         <section class="work">
 
             <div class="work__image-area--left">
-                <img src="" alt="">
+                <img src="assets/images/anderson/andersonLogo.jpg" alt="">
             </div>
             <div class="text-box">
                 <div class="text-box__content">
-                    <h3>JS games</h3>
+                    <h3>Anderson Construction</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus non dolore, adipisci facere natus inventore
                         tempore a accusantium necessitatibus illum reiciendis consectetur ullam quibusdam asperiores, autem
                         eius facilis quae recusandae!</p>
@@ -57,11 +57,11 @@
 
 
             <div class="work__image-area--right">
-                <img src="" alt="">
+                <img src="assets/images/coffee/logo.png" alt="">
             </div>
             <div class="text-box">
                 <div class="text-box__content">
-                    <h3>JS games</h3>
+                    <h3>Cricket's Coffee</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus non dolore, adipisci facere natus inventore
                         tempore a accusantium necessitatibus illum reiciendis consectetur ullam quibusdam asperiores, autem
                         eius facilis quae recusandae!
@@ -72,11 +72,11 @@
 
 
             <div class="work__image-area--left">
-                <img src="" alt="">
+                <img src="assets/images/arnold/arnoldCrop3.png" alt="">
             </div>
             <div class="text-box">
                 <div class="text-box__content">
-                    <h3>JS games</h3>
+                    <h3>Arnold: Workout App</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus non dolore, adipisci facere natus inventore
                         tempore a accusantium necessitatibus illum reiciendis consectetur ullam quibusdam asperiores, autem
                         eius facilis quae recusandae!
@@ -86,11 +86,11 @@
             </div>
 
             <div class="work__image-area--right">
-                <img src="" alt="">
+                <img src="assets/images/hangman/hangmanCrop.png" alt="">
             </div>
             <div class="text-box">
                 <div class="text-box__content">
-                    <h3>JS games</h3>
+                    <h3>Hangman</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus non dolore, adipisci facere natus inventore
                         tempore a accusantium necessitatibus illum reiciendis consectetur ullam quibusdam asperiores, autem
                         eius facilis quae recusandae!
@@ -101,11 +101,11 @@
 
 
             <div class="work__image-area--left">
-                <img src="" alt="">
+                <img src="assets/images/fnaf/fnafCrop.png" alt="">
             </div>
             <div class="text-box">
                 <div class="text-box__content">
-                    <h3>JS games</h3>
+                    <h3>Simple Click Game (ft.fnaf)</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus non dolore, adipisci facere natus inventore
                         tempore a accusantium necessitatibus illum reiciendis consectetur ullam quibusdam asperiores, autem
                         eius facilis quae recusandae!
