waypoint animated.css connected.

--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
 
     <!-- Build:css assets/styles/styles.css  -->
     <link rel="stylesheet" href="temp/styles/styles.css">
+    <link rel="stylesheet" href="temp/styles/animate.css">
     <!-- endbuild  -->
 
     <!-- build:js assets/scripts/Vendor.js -->
@@ -35,10 +36,10 @@
     <div class="wrapper">
         <section class="about">
             <div class="about__content">
-                <h3>About Me</h3>
-                <p> I am a web-developer based in Chicago who is currently seeking for opportunities that will allow me to utilize the skills gained at <strong>North Western coding boot camp</strong> and build a long-term career in web dveloper/software engineer. <br><br> I work hard and learn fast by taking advantage of all the resources the internet offers, and believe in keeping up with latest technology and tools in order to grow as a better developer<br> Feel free to checkout my resume.</p>
+                <h3  id="up1" class="animated">About Me</h3>
+                <p  id="up2" class="animated"> I am a web-developer based in Chicago who is currently seeking for opportunities that will allow me to utilize the skills gained at <strong>North Western coding boot camp</strong> and build a long-term career in web dveloper/software engineer. <br><br> I work hard and learn fast by taking advantage of all the resources the internet offers, and believe in keeping up with latest technology and tools in order to grow as a better developer<br><br> Feel free to checkout my resume.</p>
                <br>
-                    <a href="" class="button  button--hover button--small">RESUME</a><br>
+                    <a href=""  id="up3" class="animated button  button--hover button--small">RESUME</a><br>
 
                 
 
