--- a/app/index.html
+++ b/app/index.html
@@ -117,7 +117,7 @@
                         <div>.</div>
                         <p class="skills--padding-up">Please Feel free to checkout my resume.</p>
                     <br>
-                    <a href="" class="animateUp animated button  button--hover button--small">RESUME</a>
+                    <a href="https://drive.google.com/file/d/1wAcip7ffBgROpdYfFkQ4_q0VvzTSm6ij/view?usp=sharing" target="_blank" class="animateUp animated button  button--hover button--small">RESUME</a>
                     <br>
                     </section>
 
