font-size change for header and about

--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,8 @@
 <body>
 
     <header class="site-header">
-        <div class="site-header--intro">
+        <!-- <img class="site-header--logo" width="75px" src="assets/images/logos/aralogo.png" alt="">        -->
+        <div class="site-header--intro">     
             <h1>Hi I'm Ara.</h1>
             <h2>I am a Web developer</h2>
         </div>
