--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
         <div class="site-header--intro">     
             <h1 class=" animated animateUp">Hi I'm Ara.</h1>
             <h2 class=" animated animateUp">I am a Web developer</h2>
-            <a href="#bottom" class="button button--small button--hover button--hire animated animateUp"v>Yes, I am available for hire</a>
+            <a href="#bottom" class="button button--hover button--hire animated animateUp"v>Yes, I am available for hire</a>
         </div>
     </header>
 
@@ -46,82 +46,19 @@
                 <p class="animateUp animated"> I work hard and learn fast by taking advantage of all the resources the internet offers, and believe in keeping
                     up with the latest technology and tools in order to grow as a better developer.</p>
 
+
+
+                <h3 class="about__title">My skills</h3>
+                <p class="animateUp animated">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>       
+   
+
+
+                <p class="animated animateUp">Please Feel free to checkout my resume.</p>
+                <br>
+                <a href="https://drive.google.com/file/d/1wAcip7ffBgROpdYfFkQ4_q0VvzTSm6ij/view?usp=sharing" target="_blank" class="animateUp animated button  button--hover button--small">RESUME</a>
             </div>
+               
 
-            <div class="about__skills">
-                <h3 class="about__title">My Skill Sets</h3>
-                <div class="skills--half-at-med  animated animateLeft skills--align-right">
-                    <h4>Soft Skills</h4>
-                    <div class="skills--set">
-                        <p>I am easy to work with and have a great work ethic with an enthusiastic mind. I also have strong
-                            skill sets including: </p>
-                        <ul class="skills--list-2-col">
-                            <li>Creativity</li>
-                            <li>Collaboration</li>
-                            <li>communication</li>
-                            <li>Problem Solving</li>
-                            <li>Critical Thinking</li>
-                            <li>Adaptability</li>
-                            <!-- <li></li> -->
-                            <!-- <li>work ethic</li> -->
-                        </ul>
-                    </div>
-                </div>
-                <div class="skills--half-at-med animated animateRight skills--align-left">
-                    <h4>Programing Languages</h4>
-                    <div class="skills--set">
-                        <!-- .skill-unit -->
-                        <div class="skills--unit">
-                            <h5>HTML5/CSS3</h5>
-                            <div class="skills--bar" data-percent="100">
-                                <div class="skills--progress" style="width: 95%;"></div>
-                            </div>
-                        </div>
-                        <!-- .skill-unit -->
-
-                        <!-- .skill-unit -->
-                        <div class="skills--unit">
-                            <h5>Js/jquery</h5>
-                            <div class="skills--bar" data-percent="100">
-                                <div class="skills--progress" style="width: 75%;"></div>
-                            </div>
-                        </div>
-                        <!-- .skill-unit -->
-
-                        <!-- .skill-unit -->
-                        <div class="skills--unit">
-                            <h5>Wordpress/php</h5>
-                            <div class="skills--bar" data-percent="100">
-                                <div class="skills--progress" style="width: 65%;"></div>
-                            </div>
-                        </div>
-                        <!-- .skill-unit -->
-
-                        <!-- .skill-unit -->
-                        <div class="skills--unit">
-                            <h5>MySQL/mongoDB</h5>
-                            <div class="skills--bar" data-percent="100">
-                                <div class="skills--progress" style="width: 40%;"></div>
-                            </div>
-                        </div>
-                        <!-- .skill-unit -->
-                        <!-- .skill-unit -->
-                        <div class="skills--unit">
-                            <h5>react/redux</h5>
-                            <div class="skills--bar" data-percent="100">
-                                <div class="skills--progress" style="width: 40%;"></div>
-                            </div>
-                        </div>
-                        <!-- .skill-unit -->
-                    </div>
-
-                </div>
-            </div>
-            <div style="color:#202020">..</div>
-            <p class="skills--padding-up">Please Feel free to checkout my resume.</p>
-            <br>
-            <a href="https://drive.google.com/file/d/1wAcip7ffBgROpdYfFkQ4_q0VvzTSm6ij/view?usp=sharing" target="_blank" class="animateUp animated button  button--hover button--small">RESUME</a>
-            <br>
         </section>
 
     </div>
@@ -141,7 +78,7 @@
         <section class="work">
             <div class="work__image-area work__image-area--left">
                 <picture>
-                    <source sizes="404px" data-srcset="assets/images/anderson/anderson-responsiveCrop.jpg" media="(min-width:1010px)">
+                    <source sizes="404px" data-srcset="assets/images/anderson/anderson-responsive-small.jpg" media="(min-width:1010px)">
                     <source sizes="325px" data-srcset="assets/images/anderson/anderson-responsive-small.jpg" media="(min-width:700px)">
                     <img class="lazyload" data-srcset="assets/images/anderson/anderson-responsiveCrop.jpg" alt="anderson construction">
                 </picture>
@@ -160,7 +97,7 @@
         <section class="work">
             <div class="work__image-area work__image-area--right">
                 <picture>
-                    <source sizes="404px" data-srcset="assets/images/coffee/responsiveCrop.jpg" media="(min-width:1010px)">
+                    <source sizes="404px" data-srcset="assets/images/coffee/responsiveCrop-small.jpg" media="(min-width:1010px)">
                     <source sizes="325px" data-srcset="assets/images/coffee/responsiveCrop-small.jpg" media="(min-width:700px)">
                     <img class="lazyload" data-srcset="assets/images/coffee/responsiveCrop.jpg" alt="cricket's coffee">
                 </picture>
@@ -179,7 +116,7 @@
         <section class="work">
             <div class="work__image-area work__image-area--left">
                 <picture>
-                    <source sizes="404px" data-srcset="assets/images/travel/responsiveCrop.jpg" media="(min-width:1010px)">
+                    <source sizes="404px" data-srcset="assets/images/travel/responsiveCrop-small.jpg" media="(min-width:1010px)">
                     <source sizes="325px" data-srcset="assets/images/travel/responsiveCrop-small.jpg" media="(min-width:700px)">
                     <img class="lazyload" data-srcset="assets/images/travel/responsiveCrop.jpg" alt="travel-site">
                 </picture>
@@ -199,7 +136,7 @@
             
             <div class="work__image-area work__image-area--right">
                 <picture>
-                    <source sizes="404px" data-srcset="assets/images/arnold/arnoldCrop2.png" media="(min-width:1010px)">
+                    <source sizes="404px" data-srcset="assets/images/arnold/arnoldCrop2-small.jpg" media="(min-width:1010px)">
                     <source sizes="325px" data-srcset="assets/images/arnold/arnoldCrop2-small.jpg" media="(min-width:700px)">
                     <img class="lazyload" data-srcset="assets/images/arnold/arnoldCrop2.png" alt="hangman game">
                 </picture>
@@ -218,7 +155,7 @@
         <section class="work">
             <div class="work__image-area work__image-area--left">
                 <picture>
-                    <source sizes="404px" data-srcset="assets/images/hangman/hangmanCrop.jpg" media="(min-width:1010px)">
+                    <source sizes="404px" data-srcset="assets/images/hangman/hangman-small.jpg" media="(min-width:1010px)">
                     <source sizes="325px" data-srcset="assets/images/hangman/hangman-small.jpg" media="(min-width:700px)">
                     <img class="lazyload" data-srcset="assets/images/hangman/hangmanCrop.jpg" alt="hangman game">
                 </picture>
@@ -237,7 +174,7 @@
         <section class="work">
             <div class="work__image-area work__image-area--right">
                 <picture>
-                    <source sizes="404px" data-srcset="assets/images/fnaf/fnafCrop.jpg" media="(min-width:1010px)">
+                    <source sizes="404px" data-srcset="assets/images/fnaf/fnafCrop-small.jpg" media="(min-width:1010px)">
                     <source sizes="325px" data-srcset="assets/images/fnaf/fnafCrop-small.jpg"
                         media="(min-width:700px)">
                     <img class="lazyload" data-srcset="assets/images/fnaf/fnafCrop.jpg"
