--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
     <!-- Build:css assets/styles/styles.css  -->
     <link rel="stylesheet" href="temp/styles/styles.css">
     <link rel="stylesheet" href="temp/styles/animate.css">
+    <link rel="stylesheet" href="temp/styles/hover.css">
     <!-- endbuild  -->
 
     <!-- build:js assets/scripts/Vendor.js -->
@@ -30,7 +31,7 @@
         <div class="site-header--intro">     
             <h1 class=" animated animateUp">Hi I'm Ara.</h1>
             <h2 class=" animated animateUp">I am a Web developer</h2>
-            <a href="#bottom" class="button button--hover button--hire animated animateUp"v>Yes, I am available for hire</a>
+            <a href="#bottom" class=" button button--hover button--hire animated animateUp">Yes, I am available for hire</a>
         </div>
     </header>
 
@@ -49,7 +50,7 @@
                 </div>
 
                 <div class="about__content">
-                    <h3 class="about__title">About my skills</h3>
+                    <h3 class="about__title">What I can do</h3>
                     <p class="animateUp animated">I usually design websites with <i>HTML/CSS</i> with a touch of <i>JavaScript/Jquery</i>. My later projects have been focused on mobile-first responsive websites using <i>Gulp</i> and <i>Webpack</i> for easier development.</p>
 
                     <p class="animated animateUp">Most of my projects were built using <i>node.js</i> and I have made apps with <i>MySQL</i> and <i>MongoDB</i> as well. I have dabbled with <i>react/redux</i> and <i>wordpress/php</i>.</p>
@@ -58,9 +59,9 @@
                 </div>
 
                 <div class="about__content ">
-                    <p class="animated animateUp" style="text-align:center;">Please Feel free to checkout my resume.</p>
+                    <p class="animated animateUp about--padding-b" style="text-align:center;">Please Feel free to checkout my resume.</p>
                     <br>
-                    <a href="https://drive.google.com/file/d/1wAcip7ffBgROpdYfFkQ4_q0VvzTSm6ij/view?usp=sharing" target="_blank" class="animateUp animated button  button--hover button--small">RESUME</a>
+                    <a href="https://drive.google.com/file/d/1njg7Ete-buWg1z43To-cu7NvBaNqaoOZ/view?usp=sharing" target="_blank" class="animateUp animated button  button--hover button--small button--text-white">RESUME</a>
 
                 </div>
             </div>
@@ -104,7 +105,7 @@
                         company needed website that would highlight their projects so I designed and developed their brand
                         new website.</p>
                     <p>The website is developed with mobile-first responsive design using <i>Gulp</i> and <i>Webpack.</i></p>
-                    <a href="http://andersonconstructionfrederic.com" target="_blank" class="button button--hover">View Project</a>
+                    <a href="http://andersonconstructionfrederic.com" target="_blank" class="button button--hover button--no-margin-top">View Project</a>
                 </div>
             </div>
 
@@ -177,10 +178,10 @@
                         </a>
                     </h3>
                     <h4>Full Stack Development </h4>
-                    <p>Arnold is a full stack app where it keeps tracks of your workouts weekly with a login/authentication using <i>passport.js</i> and <i>MySQL</i>.  I used <i>handlebar.js</i> as a template.</p> 
-                <p>unfortunatly it is not on air, but please feel free to check out the source code.
+                    <p>Arnold is a full stack app with MVC framework where it keeps tracks of your workouts weekly with a login/authentication using <i>passport.js</i> and <i>MySQL</i>.  I used <i>handlebar.js</i> for a template.</p> 
+                <p>Unfortunatly it is not on air at the moment, but please feel free to check out the source code.
                     </p>
-                    <a href="https://github.com/Arakim44/arnold-workout" target="_blank" class="button button--hover">View Source Code</a>
+                    <a href="https://github.com/Arakim44/arnold-workout" target="_blank" class="button button--hover button--no-margin-top">View Source Code</a>
                 </div>
             </div>
         </section>
@@ -204,7 +205,8 @@
                     <p>Almost everyone knows how to play game of hangman, but everyone does not know how to code it. Enjoy this
                         (non-responsive) javascript game and think about how you would code this simple game.
                     </p>
-                    <a href="http://hangman-game-ara-kim.herokuapp.com/index.html" target="_blank" class="button  button--hover">Play Game</a>
+                    <p>This hangman is actually tough. Even though I made the game, I cannot guess the words right. Give it a try!</p>
+                    <a href="http://hangman-game-ara-kim.herokuapp.com/index.html" target="_blank" class="button  button--hover button--no-margin-top">Play Game</a>
                 </div>
             </div>
         </section>
@@ -228,6 +230,7 @@
                     <p>Simple click event game (non-responsive ) that does math of survival. Make sure to choose a right
                         character to win this game.
                     </p>
+                    <p>This game features <i>Friday Night at Freddy's</i> indie game, and my game is nothing like the original game. </p> 
                     <a href="http://simple-game-ara-kim.herokuapp.com/" target="_blank" class="button button--hover">Play Game</a>
                 </div>
             </div>
@@ -250,7 +253,7 @@
 
 
 
-
+  
 
 
     <!-- <div class="image-divider"></div> -->
@@ -279,6 +282,7 @@
         </div>
     </footer>    
 
+    <!--Wolf: You are Loyal and protective of those around you and you have a very strong personal moral code. You normal focus on your friends and those close to you while putting up with strangers which you'd rather not. You enjoy nature and the smell of fresh air. You'll never be comfortable behind a desk job even if you have to do it. -->
 
 
     <!-- build:js assets/scripts/App.js -->
