--- a/app/index.html
+++ b/app/index.html
@@ -96,7 +96,7 @@
             <div class="text-box">
                 <div class="text-box__content">
                     <h3>Anderson Construction
-                        <a href="https://github.com/Arakim44" target="_blank">
+                        <a href="https://github.com/Arakim44/AndersonConstruction1" target="_blank">
                             <i class="text-box--icon fa fa-github"></i>
                         </a>
                     </h3>
